Updated page title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Scouted - Connect with Creators</title>
+    <title>Scouted | Collab</title>
     <meta name="description" content="Join Scouted to connect with creators, share content, and grow your audience." />
     <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCiMk1Iu16HXvAzMgbC-jgIgBTLoWCi_eg&libraries=places"></script>
   </head>
